--- a/calendarview/src/main/res/values/strings.xml
+++ b/calendarview/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <array name="day_offweek_labels">
+    <array name="day_off_week_labels">
         <item>SU</item>
         <item>MO</item>
         <item>TU</item>
